@@ -1,15 +1,15 @@
 package blazingtwist.sod_luadatabasebot.utils;
 
+import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLConnection;
+import java.io.StringReader;
+import java.net.URI;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
@@ -17,11 +17,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.zip.GZIPInputStream;
-import javax.net.ssl.HttpsURLConnection;
+import org.spongepowered.configurate.BasicConfigurationNode;
+import org.spongepowered.configurate.jackson.JacksonConfigurationLoader;
 
 public class WebContext {
 
-	private static final Charset encoderCharset = StandardCharsets.UTF_16LE;
+	private static final Charset encoderCharset = StandardCharsets.UTF_8;
 
 	private final HashMap<String, String> cookies = new HashMap<>();
 
@@ -31,80 +32,56 @@ public class WebContext {
 				.collect(Collectors.joining("; "));
 	}
 
-	private WebResponse _sendRequest(WebRequest request, String contentType) throws IOException {
-		URLConnection connection = request.toUrl().openConnection();
-		if (request.bodyForm.size() > 0) {
-			if (request.baseUrl.startsWith("https:/")) {
-				HttpsURLConnection httpsConnection = (HttpsURLConnection) connection;
-				httpsConnection.setRequestMethod("POST");
-			} else if (request.baseUrl.startsWith("http:/")) {
-				HttpURLConnection httpConnection = (HttpURLConnection) connection;
-				httpConnection.setRequestMethod("POST");
-			}
-		} else {
-			if (request.baseUrl.startsWith("https:/")) {
-				HttpsURLConnection httpsConnection = (HttpsURLConnection) connection;
-				httpsConnection.setRequestMethod("GET");
-			} else if (request.baseUrl.startsWith("http:/")) {
-				HttpURLConnection httpConnection = (HttpURLConnection) connection;
-				httpConnection.setRequestMethod("GET");
-			}
-		}
+	private WebResponse _sendRequest(WebRequest request, String contentType) throws IOException, InterruptedException {
+		HttpClient client = HttpClient.newHttpClient();
+		HttpRequest.Builder requestBuilder = HttpRequest.newBuilder()
+				.uri(request.toUri());
 
-		connection.setRequestProperty("Accept", "*/*");
-		connection.setRequestProperty("Accept-Encoding", "gzip");
-		connection.setRequestProperty("Connection", "keep-alive");
-		connection.setRequestProperty("Content-Type", contentType);
-		String cookieString = getCookieString();
-		if (!StringUtils.isNullOrWhitespace(cookieString)) {
-			connection.setRequestProperty("Cookie", cookieString);
-		}
 		if (request.bodyForm.size() > 0) {
 			String bodyString = request.getBodyString();
-			connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
-			connection.setRequestProperty("Content-Length", "" + bodyString.length());
-			connection.setDoOutput(true);
-			OutputStream outputStream = connection.getOutputStream();
-			outputStream.write(bodyString.getBytes(StandardCharsets.UTF_8));
-			outputStream.flush();
-			outputStream.close();
+			requestBuilder.header("Content-Type", "application/x-www-form-urlencoded");
+			requestBuilder.POST(HttpRequest.BodyPublishers.ofString(bodyString, StandardCharsets.UTF_8));
+		} else {
+			requestBuilder.GET();
 		}
-		connection.connect();
 
-		//new GZIPInputStream(connection.getInputStream()).readNBytes(64);
-		byte[] responseBytes = new byte[Integer.parseInt(connection.getHeaderFields().get("Content-Length").get(0))];
-		InputStream inputStream = connection.getInputStream();
-		byte[] buffer = new byte[1024];
-		int readBytes;
-		int totalReadBytes = 0;
-		while ((readBytes = inputStream.read(buffer)) > 0) {
-			System.arraycopy(buffer, 0, responseBytes, totalReadBytes, readBytes);
-			totalReadBytes += readBytes;
+		requestBuilder.header("Accept", "*/*");
+		requestBuilder.header("Accept-Encoding", "gzip");
+		requestBuilder.header("Content-Type", contentType);
+		String cookieString = getCookieString();
+		if (!StringUtils.isNullOrWhitespace(cookieString)) {
+			requestBuilder.header("Cookie", cookieString);
 		}
-		inputStream.close();
-		GZIPInputStream gzipInputStream = new GZIPInputStream(new ByteArrayInputStream(responseBytes));
-		String responseString = new String(gzipInputStream.readAllBytes(), StandardCharsets.UTF_8);
-		gzipInputStream.close();
-		for (Map.Entry<String, List<String>> entry : connection.getHeaderFields().entrySet()) {
-			if ("set-cookie".equalsIgnoreCase(entry.getKey())) {
-				for (String setCookie : entry.getValue()) {
+
+		HttpResponse<byte[]> response = client.send(requestBuilder.build(), HttpResponse.BodyHandlers.ofByteArray());
+		for (Map.Entry<String, List<String>> headerEntry : response.headers().map().entrySet()) {
+			if ("set-cookie".equalsIgnoreCase(headerEntry.getKey())) {
+				for (String setCookie : headerEntry.getValue()) {
 					String[] cookieSplit = setCookie.split("; ")[0].split("=");
 					cookies.put(URLDecoder.decode(cookieSplit[0], encoderCharset), URLDecoder.decode(cookieSplit[1], encoderCharset));
 				}
 			}
 		}
-		return new WebResponse(connection.getURL(), responseString, connection.getHeaderFields());
+
+		GZIPInputStream gzipInputStream = new GZIPInputStream(new ByteArrayInputStream(response.body()));
+		String string = new String(gzipInputStream.readAllBytes(), StandardCharsets.UTF_8);
+		BasicConfigurationNode rootNode = JacksonConfigurationLoader.builder()
+				.source(() -> new BufferedReader(new StringReader(string)))
+				.build()
+				.load();
+
+		return new WebResponse(response, string, rootNode);
 	}
 
-	public WebResponse sendRequest(WebRequest request) throws IOException {
+	public WebResponse sendRequest(WebRequest request) throws IOException, InterruptedException {
 		return _sendRequest(request, "application/json");
 	}
 
-	public WebResponse sendRequestMultipart(WebRequest request) throws IOException {
+	public WebResponse sendRequestMultipart(WebRequest request) throws IOException, InterruptedException {
 		return _sendRequest(request, "multipart/form-data");
 	}
 
-	public record WebResponse(URL url, String responseText, Map<String, List<String>> headerFields) {
+	public record WebResponse(HttpResponse<?> response, String responseText, BasicConfigurationNode responseNode) {
 	}
 
 	public static class WebRequest {
@@ -126,7 +103,7 @@ public class WebContext {
 			return this;
 		}
 
-		public URL toUrl() {
+		public URI toUri() {
 			String urlString = baseUrl;
 			if (params.size() > 0) {
 				String paramString = params.entrySet().stream()
@@ -134,12 +111,7 @@ public class WebContext {
 						.collect(Collectors.joining("&"));
 				urlString += ("?" + paramString);
 			}
-			try {
-				return new URL(urlString);
-			} catch (MalformedURLException e) {
-				System.err.println("Failed to build URL. Exception: " + e);
-				return null;
-			}
+			return URI.create(urlString);
 		}
 
 		public String getBodyString() {
